# asset-search-v2

./: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml  test.py
data/: gics_mapping.csv
docs/: architecture-overview.md
docs/superpowers/plans/: 2026-03-13-test-suite.md
docs/superpowers/specs/: 2026-03-13-test-suite-design.md  2026-03-16-parallel-discovery-design.md
scripts/: clear_cache.sh  init_cache_db.sql  init_db.sh
src/asset_discovery/: __init__.py  __main__.py  config.py  cost.py  db.py  display.py  gics.py  helpers.py  models.py  pipeline.py
src/asset_discovery/stages/: __init__.py  discover.py  extract.py  merge.py  prompts.py  qa.py  scrape.py  tools.py  verify.py
src/asset_search/: __init__.py  __main__.py  config.py  cost.py  db.py  display.py  helpers.py  models.py  pipeline.py  signals.py
src/asset_search/stages/: collect.py  discover.py  extract.py  ingest.py  merge.py  prompts.py  qa.py  scrape.py  tools.py  validate.py
tests/: conftest.py  test_pipeline.py
tests/integration/: conftest.py  test_db_live.py  test_scrape_live.py  test_two_pass_extract.py
tests/unit/: test_config.py  test_cost.py  test_db.py  test_extract.py  test_merge.py  test_models.py  test_scrape.py  test_signal_dedup.py  test_tools.py
